--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -1,8 +1,7 @@
 name: Build and deploy Hugo site to GitHub Pages
-"on":
+on:
   push:
-    branches:
-    - main
+    branches: [ 'main' ]
 permissions: read-all
 jobs:
   github-pages:
